--- a/templates/admin/sidebar.html.twig
+++ b/templates/admin/sidebar.html.twig
@@ -40,7 +40,7 @@
 
     <!-- Nav Item - signalements -->
     <li class="nav-item active">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('admin.Signalements.index') }#}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('admin.signal.index') }}">
             <span>Signalements</span>
         </a>
     </li>
