--- a/templates/admin/signalements/base.html.twig
+++ b/templates/admin/signalements/base.html.twig
@@ -41,20 +41,20 @@
                                 <div class="row col-sm-12">
                                     <div class="table-responsive">
                                 
-                                    <table id="signal-table" class"table table-bordered"  width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
-                                            <th>Avatar</th>
-                                            <th>Nom de la chaîne</th>
-                                            <th>Nombre de signalements</th>
-                                            <th>Liste des signalements</th>
-                                            <th>Management</th>
-                                        </tr>
-                                    </thead>
+                                    <table class="table table-bordered" id="signal-table" width="100%" cellspacing="0">
+                                        <thead>
+                                            <tr>
+                                                <th>Avatar</th>
+                                                <th>Nom de la chaîne</th>
+                                                <th>Status</th>
+                                                <th>Management</th>
+                                            </tr>
+                                        </thead>
                                     <tbody id="signal-corps">
-                                        
+
+                                    
                                     </tbody>
-                                    </table>
+                                    </table> 
                                     <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
                                         
                                     </div>      
