--- a/templates/admin/signalements/script.html.twig
+++ b/templates/admin/signalements/script.html.twig
@@ -7,3 +7,37 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{{ asset('js/sb-admin-2.min.js') }}"></script>
+
+<script>
+//signal-corps
+
+$(document).ready(function() {
+
+    const token = localStorage.getItem("token");
+
+    if(token !== ""){
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/signalements/all",
+            headers: {
+                'Authorization':'Bearer ' + token
+            },
+            dataType: "json",
+        }).done((response) =>{
+
+            if(response != undefined) {
+
+            }
+            console.log(response);
+
+        }).fail((error) =>{
+
+            console.log(error);
+        });
+    }
+
+});
+
+
+</script>
