mise à jour des controlleurs et modification et bannissement de chaine cote superadmin

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -312,7 +312,7 @@ a.btn.bouton-password{color: white; box-shadow: 0 6px 10px 0 #0000001a,0 1px 18p
 /*
 * player pause css*/
 
-#player-container #play-pause1 {
+#player-container #play-pause {
     cursor: pointer;
     text-indent: -999999px;
     height:70px;
@@ -328,81 +328,14 @@ a.btn.bouton-password{color: white; box-shadow: 0 6px 10px 0 #0000001a,0 1px 18p
     transition: transform 0.3s;
 }
 
-#player-container #play-pause2 {
-    cursor: pointer;
-    text-indent: -999999px;
-    height:70px;
-    width: 70px;
-    background: #EF0051;
-    background-repeat:no-repeat;
-    background-image: url('../assets/play.png');
-    background-position:center;
-    background-size:17px;
-    border-radius: 50px;
-    padding: 20px;
-    box-shadow: 0 6px 10px 0 #0000001a,0 1px 18px 0 #0000001a, 0 3px 5px -1px #0003;
-    transition: transform 0.3s;
-}
 
-#player-container #play-pause3 {
-    cursor: pointer;
-    text-indent: -999999px;
-    height:70px;
-    width: 70px;
-    background: #EF0051;
-    background-repeat:no-repeat;
-    background-image: url('../assets/play.png');
-    background-position:center;
-    background-size:17px;
-    border-radius: 50px;
-    padding: 20px;
-    box-shadow: 0 6px 10px 0 #0000001a,0 1px 18px 0 #0000001a, 0 3px 5px -1px #0003;
-    transition: transform 0.3s;
-}
-
-#player-container #play-pause0 {
-    cursor: pointer;
-    text-indent: -999999px;
-    height:70px;
-    width: 70px;
-    background: #EF0051;
-    background-repeat:no-repeat;
-    background-image: url('../assets/play.png');
-    background-position:center;
-    background-size:17px;
-    border-radius: 50px;
-    padding: 20px;
-    box-shadow: 0 6px 10px 0 #0000001a,0 1px 18px 0 #0000001a, 0 3px 5px -1px #0003;
-    transition: transform 0.3s;
-}
-
-#play-pause1.play {
+#play-pause.play {
     background-image: url('../assets/play.png');
 }
-#play-pause1.pause {
+#play-pause.pause {
     background-image: url('../assets/pause.png') !important;
 }
 
-#play-pause2.play {
-    background-image: url('../assets/play.png');
-}
-#play-pause2.pause {
-    background-image: url('../assets/pause.png') !important;
-}
-
-#play-pause3.play {
-    background-image: url('../assets/play.png');
-}
-#play-pause3.pause {
-    background-image: url('../assets/pause.png') !important;
-}
-
-#play-pause0.play {
-    background-image: url('../assets/play.png');
-}
-#play-pause0.pause {
-    background-image: url('../assets/pause.png') !important;
-}
 
 /*#entete th{
     border-top: none !important;
