--- a/templates/admin/channel/editChannel/editChannel.html.twig
+++ b/templates/admin/channel/editChannel/editChannel.html.twig
@@ -113,8 +113,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- /Content Row statist -->
 
-                <!-- /Content Row -->
+
                     <!-- Content Row -->
                     <div class="row">
 
