--- a/templates/admin/channel/editChannel/script.html.twig
+++ b/templates/admin/channel/editChannel/script.html.twig
@@ -155,7 +155,7 @@ $(document).ready(function() {
                 if(response != undefined)
                 {
                     $('#nbPlan').html(response.nombre_plannification);
-                    console.log(response.nombre_plannification);
+                    console.log(response.nombre_plannification.message);
                 }
                 console.log(response);
 
