--- a/templates/superAdmin/channel/base.html.twig
+++ b/templates/superAdmin/channel/base.html.twig
@@ -19,14 +19,17 @@
                     </div>
                     <div class="col-xl-10 d-flex"> 
 
-                     {#{ form_start(form) }}
-                        <!-- Search form -->
-                        <div class="form-group has-search user">
-                            <button class="fa fa-search form-control-feedback"></button>
-                             {{ form_row(form.channels) }}
+                        <div class="conteneur d-flex flex-column align-items-center justify-content-center">
+                            <div class="row recherche">
+                                    <div class="col">
+                                        <div class="form-group has-search ">
+                                            <span class="fa fa-search form-control-feedback"></span>
+                                            <input type="text" class="form-control text-dark" placeholder="Rechercher une radio" id="search"> 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      {{ form_end(form) }#}
-                    </div>
                 </div>
                 <div class="row">
                     <!-- table -->
@@ -36,36 +39,22 @@
                             <div class="card-body">
                                 <div class="row col-sm-12">
                                     <div class="table-responsive">
-                                
-                                    <table id="table" class"table table-bordered w-100" role="grid">
-                                    <thead>
-                                        <tr id='entete' role="row">
-                                            <th scope='col'>Avatar</th>
-                                            <th scope='col'>Nom de la chaîne</th>
-                                            <th scope='col'>Propriétaire</th>
-                                            <th scope='col'>Status</th>
-                                            <th scope='col'>Management</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id='corps-table'>
-                                         {% for channel in channels %}
-                                            <tr>
-                                                <td><img class="rounded-circle" style="font-size:2em; width:31px; height:32px;" src="{{ channel.avatar }}" alt="" id="profil"></td>
-                                                <td>{{ channel.nomChaine }}</td>
-                                                <td>{{ channel.proprietaire }}</td>
-                                                <td>{{ channel.status }}</td>
-                                                <td>
-                                                    <a  href='#bannirModal' data-toggle='modal' data-dismiss='modal'  class='far fa-trash-alt fa-2x'></a>
-                                                    <a href='{{ path('superadmin.channel.edit', {id: channel.id}) }}' class='fa-2x far fa-edit' id=''></a>
-                                                    
-                                                </td>
-                                            </tr>
-                                            {% include 'superAdmin/channel/removeChannel/modal.html.twig' %}
-                                         {% endfor %}
-                                    </tbody>
-                                    </table>
+                                     <table class="table table-bordered" id="channel-table" width="100%" cellspacing="0">
+                                            <thead>
+                                                <tr>
+                                                    <th>Avatar</th>
+                                                    <th>Nom de la chaîne</th>
+                                                    <th>Status</th>
+                                                    <th>Management</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="channels-corps">
+
+                                            
+                                            </tbody>
+                                        </table> 
                                     <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                        {{ knp_pagination_render(channels) }}
+                                        
                                     </div>      
                                   </div>
                                 </div>                                
@@ -98,6 +87,7 @@
     <i class="fas fa-angle-up"></i>
 </a>
 
+ {% include 'superAdmin/channel/removeChannel/modal.html.twig' %}
 
 </body>
 
