--- a/templates/superAdmin/channel/editChannel/editChannel.html.twig
+++ b/templates/superAdmin/channel/editChannel/editChannel.html.twig
@@ -30,20 +30,21 @@
                         <!--img logo-->
                          <div class="image-upload">
                             <label for="cameraInput">
-                                <img src="{{ channel.avatar }}" alt="" id="profil">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="img" id="profil">
                                 <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                             </label>
                             <input type="file" accept="image/*" id="cameraInput">
                         </div>
+
                         <!--input-->
                         <div class="row mb-1">
                             <div class="col-sm">
                              
                                 <div class="form-group editchannel" >
-                                     <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value='{{channel.nomChaine}}'> 
+                                     <input type='text' id="channels" class='form-control text-center text-black' placeholder='nom de la chaine' value=''> 
                                 </div>
                                 <div class="form-group editchannel">
-                                    <button id="button-settingsAdmin" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" >Enregistrer</button>
+                                    <input id="button-settingsAdmin" type='submit' class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;" value="Enregistrer">
                                 </div>
                            
                             </div>
@@ -56,14 +57,14 @@
                     <!-- Content Row -->
                     <div class="row">
 
-                    <!-- Nombre d’utilisateurs Card Example -->
+<!-- Nombre favoris Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-principal justify-content-center">Nombre d’utilisateurs</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">98’578</div>
+                                    <div class="text-principal justify-content-center">Nombre favoris</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris"></div>
                                 </div>
                             </div>
                         </div>
@@ -76,22 +77,22 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-bleue">Nombre d’abonnés</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">44’577</div>
+                                    <div class="text-bleue">Nombre d’ecoutes</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbEcoute"></div>
                                 </div>
                             </div>
                         </div>
                         </div>
                     </div>
 
-                    <!-- Total d'écoutes Card Example -->
+                    <!-- Total de plannification Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-turquoise">Total d'écoutes</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">453’987</div>
+                                    <div class="text-turquoise">Total de plannification</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbPlan"></div>
                                 </div>
                             </div>
                         </div>
@@ -104,16 +105,16 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2  mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-purple">Nombre de chaînes créée</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">24’767</div>
+                                    <div class="text-purple">Nombre de stream créée</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbStream"></div>
                                 </div>
                             </div>
                         </div>
                         </div>
                     </div>
                 </div>
+                <!-- /Content Row statist -->
 
-                <!-- /Content Row -->
                     <!-- Content Row -->
                     <div class="row">
 
@@ -122,7 +123,7 @@
                         <div class="card shadow mb-4">
                         <!-- Card Header - Dropdown -->
                         <div class="card-header d-flex flex-row align-items-center justify-content-between">
-                            <h6 class="text-purple">Nombre d’inscrits par mois</h6>
+                            <h6 class="text-purple">Nombre d’écoute par mois</h6>
                         </div>
                         <!-- Card Body -->
                         <div class="card-body">
