--- a/templates/superAdmin/channel/editChannel/script.html.twig
+++ b/templates/superAdmin/channel/editChannel/script.html.twig
@@ -23,24 +23,165 @@
 <script>
 $(document).ready(function() {
 
+    String.prototype.rtrim = function() {
+        return this.replace(/\s+$/, "");
+    }
+
+        function inputUsername(inputData,input){
+            let usernameData = inputData.rtrim();
+            let usernameInput = input;
+
+            if(usernameData.length < 1){
+                usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>');   
+                
+            }else{
+                if(usernameData > 10) {
+                    usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
+                }
+                return usernameData;
+                
+            }
+        }//  verify username
+
+    const reset = () => {
+        $(".btn_submit").attr("disabled", false);
+        $(".btn_submit").css("background-color", "#EF0051");
+        $(".btn_submit").hover(() => { $(".btn_submit").css("background-color", "#D31052") })
+    };
+
+    const disable = () => {
+        $(".btn_submit").attr("disabled", true);
+        $(".btn_submit").css("background-color", "gray");
+    }
+
     let firebaseConfig;
     let downloadUrl;
 
-    $.ajax({
-    method: "GET", 
-    url: "/superadmin/superadmin-firebase", 
-    async: true,
-    success: function(data) {
-    //console.log(data.apiKey+" "+data.authDomain+" "+data.databaseURL+" "+data.projectId+" "+data.storageBucket);
     
-        firebaseConfig = {
-            apiKey: data.apiKey,
-            authDomain: data.authDomain,
-            databaseURL: data.databaseURL,
-            projectId: data.projectId,
-            storageBucket: data.storageBucket
-        };
+    const token = localStorage.getItem("token");
+    let idChannel = localStorage.getItem("userChannelId");
 
+
+    if(token !== "" || idChannel !=="") {
+
+        /*
+        * affiche une chaine 
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/channels/"+idChannel,
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#channels').attr('value', response.channel.channel_name);
+                    $('#profil').attr('src', response.channel.avatar);
+                    $('#nbEcoute').html(response.channel.nbr_ecoute);
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });
+
+        
+
+        /*
+        * Total de stream crée pour une chaîne
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/"+idChannel,
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('nbStream').html(response.stream_crée);
+                    console.log(response.stream_crée);
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });
+    // fin stream total pour chaine   
+
+
+        /*
+        * Total de favoris d'une chaîne
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/plan/5e96bc595ca841cb25233bf7",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#nbFavoris').html(response.favoris);
+                    console.log(response.favoris);
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total de favoris d'une chaîne
+
+
+        /*
+        * Total de plannification pour un utilisateur
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/plan/"+idChannel,
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#nbPlan').html(response.nombre_plannification);
+                    console.log(response.nombre_plannification.message);
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// 
+
+ 
+
+        //firebase
+        $.ajax({
+            type: "GET",
+            url: "/firebase",
+        }).done((data) =>{
+
+            firebaseConfig = {
+                apiKey: data.apiKey,
+                authDomain: data.authDomain,
+                databaseURL: data.databaseURL,
+                projectId: data.projectId,
+                storageBucket: data.storageBucket
+            };
 
         firebase.initializeApp(firebaseConfig);
 
@@ -51,7 +192,7 @@ $(document).ready(function() {
 
         
             let filename = $('#cameraInput').val().replace(/C:\\fakepath\\/i, '');
-            let storageRef = firebase.storage().ref('/User/{{ channel.id }}' + filename);
+            let storageRef = firebase.storage().ref('/User/channel'+idChannel+filename);
 
             // On envoi le fichier à Firebase
             let upload = storageRef.put(selectedFile);
@@ -70,52 +211,65 @@ $(document).ready(function() {
             
                 // On remplace l'URL de l'image par la nouvelle
                     $('#profil').attr('src', downloadUrl);
-                    $('#logo-setting').attr('src', downloadUrl)
-
-
-                        $('#button-settingsAdmin').click(function(e){
-                            e.preventDefault();
-                            console.log(downloadUrl)
-
-                             let channels = $('#channels').val();
-                            
-                                 $(".erreur").remove();
-
-                                if (channels.length < 3) 
-                                {
-                                    $('#channels').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>'); 
-                                }else if(channels.length > 10)
-                                {
-                                    $('#channels').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
-                                }
-                                
-                                
-
-                            $.ajax({
-                                    type: "POST", 
-                                    url: "/superadmin/channel/{{ channel.id }}/edit", 
-                                    data: JSON.stringify({
-                                        "downloadUrl": downloadUrl,
-                                        "channels": channels,
-                                    }),
-                                    async: true,
-                                    success: function(responseText) {
-                                        console.log('ici succ');
-                                    },
-                                    error: function (error) {
-                                        console.log(error);
-                                    }
-                            });
-
-                        });       
+                    $('#logo-setting').attr('src', downloadUrl) 
 
             });
+        });// change profil 
+
+
+        $('#button-settingsAdmin').click(function(e){
+                e.preventDefault();
+                disable();
+
+                let channels = $('#channels').val();
+                let inputChannel = $('#channels');
+
+                let profil = $('#profil').attr('src');
+
+                let channelName = inputUsername(channels,inputChannel);
+
+             if(token !== "" || channelName !== undefined || idChannel !==""){
+                        
+                 
+                $.ajax({
+                    type: "PUT", 
+                    url: "https://webradio-stream.herokuapp.com/authorized/channels/update/"+idChannel, 
+                     headers: {
+                        'Authorization':'Bearer ' + token
+                    },
+                    data:{
+                        avatar: profil,
+                        name: channelName,
+                    },
+                    dataType: 'json'
+                }).done((response)=>{
+                        reset();
+
+                if(response.message != undefined)
+                {
+                    $('#updatecompte').html(response.message);
+                    $('#updatecompte').css("display","block");
+
+                    console.log(response.message);
+                }
+
+                }).fail((error)=>{
+
+                    reset();
+                    console.log(error);
+
+                })
+
+            }//if
+
+        });  //fin 
+
+
+        }).fail((error) =>{
+
+            console.log(error);
         });
+    }// fin de grand if
 
-    }
-
-    });
-
-    
 });
 </script>
